--- a/homepage.html
+++ b/homepage.html
@@ -22,13 +22,13 @@
 			<div id="side1" class="divider">
 				<h2>Websites</h2>
 				<h3>Mondrian</h3>
-				<img src="images/mondrian.PNG" alt="mondrian">
+				<img src="images/mondrian.png" alt="mondrian">
 				<p>On this website you see a piece of art created by me inspired by Piet Mondrian. I used different floats and boxes to create this masterpiece.</p>
 				<h3>Vacation</h3>
-				<img src="images/vaca.PNG" alt="vacation">
+				<img src="images/vaca.png" alt="vacation">
 				<p>This website contains images of several places I would like to go on vacation. I used a grid format to design this website and created a photo gallery.</p>
 				<h3>Travel Agency</h3>
-				<img src="images/trav.PNG" alt="travel">
+				<img src="images/trav.png" alt="travel">
 				<p>Here is a my travel agency website!! To create this I used a nav, flexbox, and a grid. You should book a vacation with this travel agency its really good :).</p>
 			</div>
 			<div id="side2">
